添加 add player  功能

--- a/hero.html
+++ b/hero.html
@@ -9,6 +9,9 @@
 		<div class="logo"></div>
 		<h1 class="title">Hero</h1>
 		<div class="subtitle">选择一个玩家并给他加分</div>
+		<form class="add-a-player">
+			<input type="text" name="name" placeholder="添加一名新玩家"/>
+		</form><br/><br/>
 		{{> hero}}
 	</div>
 </body>
